# cache-orbit

./: .gitignore  Cargo.toml  Dockerfile.cache-engine
cache-orbit-main/: Makefile  README.md  docker-compose.yml
cache-orbit-main/docker/grafana/provisioning/: datasources.yml
cache-orbit-main/docker/prometheus/: prometheus.yml
cache-orbit-main/docs/: CHANGELOG.md  LOCAL_TESTING.md  OPERATIONS.md  tradeoffs.md
cache-orbit-main/src/cache-engine/: Cargo.toml  Dockerfile
cache-orbit-main/src/cache-engine/src/: hotkey.rs  invalidation.rs  lib.rs  metrics.rs
cache-orbit-main/src/cache-engine/src/bench/: mod.rs
cache-orbit-main/src/cache-engine/src/partition/: mod.rs
cache-orbit-main/src/control-plane/: Dockerfile  go.mod  go.sum  main.go
cache-orbit-main/src/control-plane/proto/: CMakeLists.txt  control.proto
cache-orbit-main/src/operator-ui/: Dockerfile  next.config.js  package.json  setup-and-run.bat  tailwind.config.js
cache-orbit-main/src/operator-ui/src/: server.js
cache-orbit-main/src/operator-ui/src/app/: globals.css  page.tsx
cache-orbit-main/src/operator-ui/src/components/: benchmark-panel.tsx  hotkey-heatmap.tsx  metrics-dashboard.tsx
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  PERFORMANCE.md  architecture.md  roadmap.md
src/cache-engine/: Makefile
src/cache-engine/src/: benchmark.rs  main.rs  partition.rs
src/cache-engine/src/invalidation/: mod.rs
src/operator-ui/: package-lock.json
src/operator-ui/src/components/: invalidation-timeline.tsx  real-time-consistency.tsx  topology-graph.tsx
