[package]
name = "cache-orbit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json", "ws", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1.0"
moka = { version = "0.12", features = ["future"] }
dashmap = "5.5"
parking_lot = "0.12"
blake3 = "1.5"
uuid = { version = "1.6", features = ["v4"] }
redis-protocol = "3.0"
glob-match = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "load"
harness = false
